# zera-resourcemanager-protobuf

./: .gitignore  CMakeLists.txt  netmessages.proto  protocol-buffers.pro  zeraprotobufConfig.cmake.in
.github/workflows/: build.yml
resourcemanager/: netmessages.proto  resourcemanager.pro
